--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,8 @@ header {
     margin-top: 30px;
     background-color: white;
     align-items: center;
+    display: flex;
+    justify-content: space-between;
     
     p {
         color: #000;
