--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,11 +6,11 @@ header {
     display: flex;
     justify-content: space-between;
     
-    p {
+    strong {
         color: #000;
 
         font-family: Inter;
-        font-size: 16px;
+        font-size: 20px;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
