--- a/src/components/InstructionsBlock/InstructionsBlock.module.scss
+++ b/src/components/InstructionsBlock/InstructionsBlock.module.scss
@@ -2,18 +2,22 @@
 
 .InstructionsBlock {
   padding: 18px;
-  background-color: #fff;
+  border: 0.5px solid #f1f1f1;
+  // background-color: #fffff3;
   
   width: 100%;
-  border-radius: 10px;
+  height: auto;
+  border-radius: 20px;
 
   h2 {
     margin-bottom: 34px;
     border-radius: 10px;
-    @include styles_text(12px, 600);
+    @include styles_text(24px, 600 , #000);
   }
 
-  p {
-    @include styles_text(12px, 400);
+  li {
+    @include styles_text(18px, 400 , #000);
+    padding: 7px 10px;
+    list-style-type:  none;
   }
 }
